Text alignment fix

--- a/static/scss/detail/courses-in-program.scss
+++ b/static/scss/detail/courses-in-program.scss
@@ -99,9 +99,9 @@
   p {
     margin: 0 0 10px;
     min-height: 89px;
-    color: $light-gray;
     padding-bottom: 40px;
     padding-top: 20px;
+    text-align: start;
   }
 
   .read-more {
